# TairGis

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README-CN.md  README.md
src/: CMakeLists.txt  redismodule.h  spatial.c  spatial.h  tairgis.c  tairgis.h  util.c  util.h
src/spatial/: .gitignore  Makefile  bing.c  bing.h  geom.c  geom.h  geom_json.c  geom_levels.c  geom_polymap.c  geom_test.c  geoutil.c  geoutil.h  geoutil_test.c  grisu3.c  grisu3.h  hash.c  hash.h  json.c  poly.c  poly.h  poly_test.c  polyinside.c  polyinside_test.c  polyintersects.c  polyintersects_test.c  polyraycast.c  rtree.c  rtree.h  rtree_test.c  rtree_tmpl.c  test.c  test.h  zmalloc.h
tests/: tairgis.tcl
